<resources>
    <string name="app_name">爱驾宝</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home_text">首页</string>
    <string name="tab_book_text">预约</string>
    <string name="tab_info_text">知识</string>
    <string name="tab_mine_text">我的</string>
    <string name="test_string"/>
    <string name="home_yueche">约车</string>
    <string name="home_myschool">我的驾校</string>
    <string name="home_mysubject">我的科目</string>
    <string name="home_myteacher">我的教练</string>
    <string name="home_yueba">约</string>
    <string name="home_yiyueshijian">已约时间</string>
    <string name="me_login">请登录</string>
    <string name="me_info">我的资料</string>
    <string name="me_yue">我的预约</string>


    <string name="me_item">我的项目</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_course">我的课程</string>
    <string name="me_message">我的消息</string>
    <string name="me_teacher">我的教练</string>
    <string name="me_password">修改密码</string>
    <string name="me_feedback">用户反馈</string>
    <string name="me_setup">设  置</string>
    <string name="me_help">帮  助</string>
    <string name="login_phone">请输入手机号码</string>
    <string name="login_psw">密码</string>
    <string name="login_denglu">登  录</string>
    <string name="login_user_name_is_null">手机号不能为空！</string>
    <string name="login_user_pwd_is_null">密码不能为空！</string>
    <string name="login_user_pwd_short">密码长度不能少于6位！</string>
    <string name="login_user_name_is_error">请输入正确的手机号码!</string>
    <string name="warn_text">您还没有预约练车时段，赶紧预约吧！</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="reminder_info">取消时间原则上不晚于预约时间前12小时，否则可能面临违约处罚!</string>
    <string name="help_text_0">1.爱驾宝APP使用需要与学员注册后绑定驾校和教练，与教练建立关系后可预约练车时间。</string>
    <string name="help_text_1">2.爱驾宝APP使用需要与学员注册后绑定驾校和教练，与教练建立关系后可预约练车时间。</string>
    <string name="web">官网: www.ijiab.com</string>
    <string name="email">邮箱: 3302717295@qq.com</string>
    <string name="weix">微信: ijiab01</string>
    <string name="old_pass">请输入旧密码</string>
    <string name="new_pass">请输入新密码</string>
    <string name="confirm_new_pass">请确认新密码</string>
    <string name="title_activity_apply_know">ApplyKnow</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
