<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <com.udit.aijiabao.widgets.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/titleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@mipmap/logo"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/app_name"
        android:textSize="@dimen/font_18"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weix"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="200dp"

        android:text="@string/web"
        android:textColor="#808080"
        android:textSize="@dimen/font_body"/>

    <TextView
        android:id="@+id/weix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:text="@string/weix"
        android:textColor="#808080"
        android:textSize="@dimen/font_body"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:text="@string/email"
        android:textColor="#808080"
        android:textSize="@dimen/font_body"/>

</RelativeLayout>