<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.udit.aijiabao.widgets.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@mipmap/login_denglu_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/login_yaoshi_icon"/>

                <com.udit.aijiabao.widgets.ClearEditText
                    android:id="@+id/old_pass_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_small"
                    android:layout_marginRight="@dimen/space_small"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/old_pass"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textColor="@color/gray_80"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@mipmap/login_denglu_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/login_yaoshi_icon"/>

                <com.udit.aijiabao.widgets.ClearEditText
                    android:id="@+id/new_pass_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_small"
                    android:layout_marginRight="@dimen/space_small"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/new_pass"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textColor="@color/gray_80"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@mipmap/login_denglu_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_ImgView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/login_yaoshi_icon"/>

                <com.udit.aijiabao.widgets.ClearEditText
                    android:id="@+id/confirm_pass_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/space_small"
                    android:layout_marginRight="@dimen/space_small"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/confirm_new_pass"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textColor="@color/gray_80"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>