<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/loginbackground"
              android:fitsSystemWindows="true"
              android:clipToPadding="true"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@mipmap/logo1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/login_Linelayout2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@mipmap/login_denglu_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/login_phone_icon"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/gray_10"/>

                    <com.udit.aijiabao.widgets.ClearEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_small"
                        android:layout_marginRight="@dimen/space_small"
                        android:layout_weight="1"
                        android:background="@null"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/login_phone"
                        android:inputType="number"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:textColor="@color/gray_80"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/login_Linelayout3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@mipmap/login_denglu_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/login_ImgView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/login_yaoshi_icon"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/gray_10"/>

                    <com.udit.aijiabao.widgets.ClearEditText
                        android:id="@+id/et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_small"
                        android:layout_marginRight="@dimen/space_small"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_psw"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textColor="@color/gray_80"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="16dp"
                android:text="温馨提示：如果您已经在驾校报名，无需注册就可以直接登录！默认密码为身份证后六位或123456（未验证用户）"
                android:textColor="@color/graytext"
                android:textSize="@dimen/font_small"/>


            <Button
                android:id="@+id/mLogin_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_selector_blue"
                android:text="@string/login_denglu"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <LinearLayout
                android:id="@+id/login_LineLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_login_find_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="end"
                    android:onClick="loginClick"
                    android:padding="5dp"
                    android:text="忘记密码?"
                    android:textColor="@color/blue_title"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/text_login_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:clickable="true"
                    android:gravity="start"
                    android:onClick="loginClick"
                    android:padding="5dp"
                    android:text="立即注册"
                    android:textColor="@color/blue_title"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>